feat(DEMO-0000):  新增 action 文件

--- a/.github/workflows/KMMBridge-iOS-Publish.yaml
+++ b/.github/workflows/KMMBridge-iOS-Publish.yaml
@@ -34,11 +34,11 @@ jobs:
           file: ./gradle.properties
           property: LIBRARY_VERSION
 
-      - uses: extractions/netrc@v1
-        with:
-          machine: maven.pkg.github.com
-          username: "cirunner"
-          password: ${{ secrets.GITHUB_TOKEN }}
+#      - uses: extractions/netrc@v1
+#        with:
+#          machine: maven.pkg.github.com
+#          username: "cirunner"
+#          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Print versionPropertyValue
         id: output
